--- a/midsummerjay.neocities.org/public/index.html
+++ b/midsummerjay.neocities.org/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>jay's spot (under construction)</title>
+    <title>jay's home (under construction)</title>
 	<meta name="description" content="jay's home" />
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
