--- a/public/credits.html
+++ b/public/credits.html
@@ -25,10 +25,10 @@
       
 <main id="content">
         <section>
-          <h1>intro</h1>
-          <p>
-            hello i am jay and here is my neocities. i am a gamer girl, i use she/her & he/him pronouns, and i love dorothea arnault. i do not remember how to use html and i am never open to feedback. 
-          </p>
+          <h1>credits</h1>
+          <ul>
+            <li><a href="https://www.favicon.cc/?action=icon&file_id=883290">pink pc favicon</a></li>
+          </ul>
         </section>
       </main>
 
