added bg + credits, menu formatting

--- a/public/credits.html
+++ b/public/credits.html
@@ -27,7 +27,8 @@
         <section>
           <h1>credits</h1>
           <ul>
-            <li><a href="https://www.favicon.cc/?action=icon&file_id=883290">pink pc favicon</a></li>
+            <li><a href="https://www.favicon.cc/?action=icon&file_id=989460">purple planet favicon (amna on favicon.cc)</a></li>
+            <li><a href="https://girlschannel.tumblr.com/post/678175862465740800">background (girlschannel on tumblr)</a></li>
           </ul>
         </section>
       </main>
