--- a/public/guestbook.html
+++ b/public/guestbook.html
@@ -26,7 +26,7 @@
 <main id="content">
         <section>
           <h1>guestbook</h1>
-          <iframe srcdoc="<div id='c_widget'></div><script src='comment-widget.js'></script> " src="https://docs.google.com/forms/d/e/1FAIpQLSd-Jr4KfyAH43B9Ya9EnMwxTerjPBE9uLpRJ2VxzwVX6EJ--Q/viewform?embedded=true" width="640" height="954" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+          <iframe srcdoc="<div id='c_widget'></div><script src='comment-widget.js'></script> "></iframe>
         </section>
       </main>
 
