--- a/public/guestbook.html
+++ b/public/guestbook.html
@@ -26,7 +26,7 @@
 <main id="content">
         <section>
           <h1>guestbook</h1>
-          <iframe srcdoc="<div id='c_widget'></div><script src='comment-widget.js'></script> "></iframe>
+          <iframe srcdoc="<div id='c_widget'></div><script src='comment-widget.js'></script>" width="100%" height="300"></iframe>
         </section>
       </main>
 
