--- a/public/guestbook.html
+++ b/public/guestbook.html
@@ -26,7 +26,7 @@
 <main id="content">
         <section>
           <h1>guestbook</h1>
-          <iframe srcdoc="<div id='c_widget'></div><script src='comment-widget.js'></script>" width="100%" height="100%"  frameborder="0" marginheight="0" marginwidth="0"></iframe>
+          <iframe srcdoc="<div id='c_widget'></div><script src='comment-widget.js'></script>" width="100%" frameborder="0" marginheight="0" marginwidth="0" style="min-height:100vh;"></iframe>
         </section>
       </main>
 
