--- a/public/credits.html
+++ b/public/credits.html
@@ -29,6 +29,7 @@
           <ul>
             <li><a href="https://www.favicon.cc/?action=icon&file_id=989460">purple planet favicon (amna on favicon.cc)</a></li>
             <li><a href="https://girlschannel.tumblr.com/post/678175862465740800">background (girlschannel on tumblr)</a></li>
+            <li><a href="https://virtualobserver.moe/ayano/comment-widget">guestbook (ayano/virtual observer)</a></li>
           </ul>
         </section>
       </main>
