updated "currently" section

--- a/public/blinkies.html
+++ b/public/blinkies.html
@@ -29,7 +29,8 @@
           <p>
             (all graphics will link to their source or display source on hover)
           </p>
-          <p><img src="https://petrapixel.neocities.org/assets/img/blinkies/blinkies/b%20(18).gif"></p>
+          <p><a href="https://petrapixel.neocities.org/about/blinkies"><img src="https://petrapixel.neocities.org/assets/img/blinkies/blinkies/b%20(18).gif"></a><br />
+            <a href="https://petrapixel.neocities.org/about/blinkies"><img src="https://petrapixel.neocities.org/assets/img/blinkies/buttons/queercode.png"></a></p>
         </section>
       </main>
 
