--- a/public/credits.html
+++ b/public/credits.html
@@ -32,6 +32,7 @@
           <ul>
             <li><a href="https://www.favicon.cc/?action=icon&file_id=989460" target="_blank">purple planet favicon (amna on favicon.cc)</a></li>
             <li><a href="https://girlschannel.tumblr.com/post/678175862465740800" target="_blank">background (girlschannel on tumblr)</a></li>
+            <li><a href="https://www.flaticon.com/packs/eighties-10" target="_blank">icons (freepik on flaticon)</a></li>
           </ul>
         </section>
       </main>
