--- a/public/blog.html
+++ b/public/blog.html
@@ -25,18 +25,9 @@
       
 <main id="content">
         <section>
-          <h1>credits</h1>
-          <h3>templates</h3>
-          <a href="https://petrapixel.neocities.org/" target="_blank"><img src="https://github.com/petracoding/petrapixel.neocities.org/blob/master/public/assets/img/linkback.gif?raw=true" alt="petrapixel" title="website layout"></a><a href="https://virtualobserver.moe/"><img src="https://virtualobserver.moe/images/sitebutton.png" title="guestbook/comment widget"></a>
-          <ul>
-            <li><a href="https://zonelets.net/">zonelets</a> (blog template)</li>
-          </ul>
-          <h3>artifacts</h3>
-          <ul>
-            <li><a href="https://www.favicon.cc/?action=icon&file_id=989460" target="_blank">purple planet favicon (amna on favicon.cc)</a></li>
-            <li><a href="https://girlschannel.tumblr.com/post/678175862465740800" target="_blank">background (girlschannel on tumblr)</a></li>
-            <li><a href="https://www.flaticon.com/packs/eighties-10" target="_blank">icons (freepik on flaticon)</a></li>
-          </ul>
+          <h1>blog</h1>
+          <div id="recentpostlistdiv"></div>
+          <script src="./blog.js"></script>
         </section>
       </main>
 
