nesting fix + sitemap update

--- a/public/sitemap.html
+++ b/public/sitemap.html
@@ -30,7 +30,12 @@
             <ul>
             <li><a href="https://midsummerjay.neocities.org/index.html">home</a></li>
             <li><a href="https://midsummerjay.neocities.org/bio.html">bio</a></li>
-            <li><a href="https://midsummerjay.neocities.org/blog.html">blog</a></li>
+            <li>
+              <a href="https://midsummerjay.neocities.org/blog.html">blog</a>
+              <ul>
+                <li><a href="https://midsummerjay.neocities.org/posts/archive.html">blog archive</a></li>
+              </ul>
+            </li>
             <li><a href="https://midsummerjay.neocities.org/guestbook.html">guestbook</a></li>
             <li><a href="https://midsummerjay.neocities.org/blinkies.html">blinkies</a></li>
             <li><a href="https://midsummerjay.neocities.org/credits.html">credits</a></li>
