--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,29 @@
 <main id="content">
         <section>
           <h1>welcome</h1>
-          <p>
-            this website is very much a work-in-progress. what am i going to use it for? who could say. 
+          <h3>hi and also hello.</h3>
+          <p>i am jay, the webmaster around these parts. 
+            i am a huge "old internet" enthusiast, despite technically being too young to have really experienced the joys of it in full.
+            so can we call this site an attempt to recapture my lost childhood? maybe so. 
+            as you can likely tell, this website is very much a work-in-progress, but currently i intend to use it as a digital journal + a shrine for my interests. 
+            </p>
+            <p>
+            even if it never ends up fully complete, i'm really enjoying having this place as a pet project. 
+            my computer science degree really did a number on me, so rediscovering my own love of messing around with simple html/css/javascript has been a joy. 
+            i hope you enjoy your time here too!
           </p>
+          <p class="divider"><img src="./images/div2.gif"></p>
+          <p>
+            some things about this site to take note of:
+            <ul>
+              <li>this site is tested exclusively on mozilla firefox! it should work on other browsers, but if anything breaks or shows up weird, feel free to download + use firefox instead :^&#41;</li>
+              <li>along similar lines, this site should be responsive + usable on mobile</li>
+              <li>while i don't plan on hosting explicit material here, i am an adult and the content on this site is intended for an adult audience.</li>
+            </ul>
+          </p>
+          <p class="divider"><img src="./images/div2.gif"></p>
+          <p>uhhh and i think that's it. have a good time poking around! 
+            and if you have any notes/questions/jokes, feel free to leave them over at <a href="https://midsummerjay.neocities.org/guestbook.html">my guestbook</a>.</p>
         </section>
       </main>
 </div>
