--- a/public/index.html
+++ b/public/index.html
@@ -37,16 +37,17 @@
             my computer science degree really did a number on me, so rediscovering my own love of messing around with simple html/css/javascript has been a joy. 
             i hope you enjoy your time here too!
           </p>
-          <p class="divider"><img src="./images/div2.gif"></p>
+          <p class="divider"><a href="http://jasminnie.weebly.com" target="_blank"><img src="./images/div2.gif"></a></p>
           <p>
             some things about this site to take note of:
             <ul>
               <li>this site is tested exclusively on mozilla firefox! it should work on other browsers, but if anything breaks or shows up weird, feel free to download + use firefox instead :^&#41;</li>
               <li>along similar lines, this site should be responsive + usable on mobile</li>
               <li>while i don't plan on hosting explicit material here, i am an adult and the content on this site is intended for an adult audience.</li>
+              <li>where possible, graphics will link to the source i got them from, and all material will be credited on the <a href="https://midsummerjay.neocities.org/credits.html">credits</a> page.</li>
             </ul>
           </p>
-          <p class="divider"><img src="./images/div2.gif"></p>
+          <p class="divider"><a href="http://jasminnie.weebly.com" target="_blank"><img src="./images/div2.gif"></a></p>
           <p>uhhh and i think that's it. have a good time poking around! 
             and if you have any notes/questions/jokes, feel free to leave them over at <a href="https://midsummerjay.neocities.org/guestbook.html">my guestbook</a>.</p>
         </section>
