added graphics + reformat h3

--- a/public/blinkies.html
+++ b/public/blinkies.html
@@ -26,12 +26,12 @@
 <main id="content">
         <section>
           <h1>blinkies and other graphics</h1>
-          <p>
-            (all graphics will link to their source or display source on hover)
-          </p>
-          <p><a href="https://petrapixel.neocities.org/about/blinkies"><img src="https://petrapixel.neocities.org/assets/img/blinkies/blinkies/b%20(18).gif"></a><br />
-            <a href="https://petrapixel.neocities.org/about/blinkies"><img src="https://petrapixel.neocities.org/assets/img/blinkies/buttons/queercode.png"></a></p>
-        </section>
+          <p><a href="https://petrapixel.neocities.org/about/blinkies"><img src="./images/gaylove.gif"></a><br />
+            <a href="https://petrapixel.neocities.org/about/blinkies"><img src="./images/queercoded.png"></a><a href="https://hillhouse.neocities.org/pixels"><img src="./images/maskstamp.gif"></a></p>
+            <p style="text-align:center;font-size:10px;">
+              (all graphics link to source)
+            </p>
+          </section>
       </main>
 
 </div>
