--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,9 @@
 <main id="content">
         <section>
           <h1>welcome</h1>
-          <h3>hi and also hello.</h3>
-          <p>i am jay, the webmaster around these parts. 
+          <div class="imgwrapright"><a href="//www.neopets.com/userlookup.phtml?user=snocatt"><img src="./images/ixiadopt.gif"></a><br></div>
+          <div><h3>hi and also hello.</h3>
+            <p>i am jay, the webmaster around these parts. 
             i am a huge "old internet" enthusiast, despite technically being too young to have really experienced the joys of it in full.
             so can we call this site an attempt to recapture my lost childhood? maybe so. 
             as you can likely tell, this website is very much a work-in-progress, but currently i intend to use it as a digital journal + a shrine for my interests. 
@@ -37,6 +38,7 @@
             my computer science degree really did a number on me, so rediscovering my own love of messing around with simple html/css/javascript has been a joy. 
             i hope you enjoy your time here too!
           </p>
+        </div>
           <p class="divider"><a href="http://jasminnie.weebly.com" target="_blank"><img src="./images/div2.gif"></a></p>
           <p>
             some things about this site to take note of:
