--- a/public/blinkies.html
+++ b/public/blinkies.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>jay's spot - blinkies</title>
-	<meta name="description" content="jay's spot - blinkies/graphics collection" />
+	<meta name="description" content="a midsummer jay's zone - blinkies" />
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
