--- a/public/guestbook.html
+++ b/public/guestbook.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>jay's spot - guestbook</title>
-	<meta name="description" content="jay's spot - guestbook" />
+	<meta name="description" content="a midsummer jay's zone - guestbook" />
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
