added loona shrine

--- a/public/shrines.html
+++ b/public/shrines.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>jay's spot - about</title>
-	<meta name="description" content="a midsummer jay's zone - about" />
+	<meta name="description" content="a midsummer jay's zone - shrines" />
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -25,28 +25,14 @@
       
 <main id="content">
         <section>
-          <h1>bio</h1>
+          <h1>shrines</h1>
           <p>
-            hello i am jay and here is my neocities. i am a gamer girl, i use she/her & he/him pronouns, and i love dorothea arnault. i only sort of remember how to use html and i am never open to feedback. 
+            this will be cuter in the future. for now, it's a directory to the shrines i have for the things i love.
           </p>
-          <p class="divider"><a href="http://jasminnie.weebly.com" target="_blank"><img src="./images/div2.gif"></a></p>
-          <p>i don't really know what to say here. idk how much to share about myself. BUT i know that this place will become a dumping ground for all my thoughts on the things i hold dear, so i guess i can start by listing those out.</p>
-          <h4>jay's interests:</h4>
           <ul>
             <li>
               <a href="https://midsummerjay.neocities.org/shrines/loona.html">the girls of loona</a>
-              <ul>
-                <li>artms</li>
-                <li>loossemble</li>
-                <li>yves</li>
-                <li>chuu</li>
-              </ul>
             </li>
-            <li>seventeen</li>
-            <li>ace attorney</li>
-            <li>fire emblem: three houses</li>
-            <li>neopets</li>
-            <li>journaling & stationery</li>
           </ul>
         </section>
       </main>
