--- a/public/shrines/loona.html
+++ b/public/shrines/loona.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>jay's spot - sitemap</title>
+    <title>jay's spot - loona</title>
 	<meta name="description" content="a midsummer jay's zone - loona" />
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
