updated shrine page

--- a/public/shrines.html
+++ b/public/shrines.html
@@ -26,14 +26,16 @@
 <main id="content">
         <section>
           <h1>shrines</h1>
-          <p>
-            this will be cuter in the future. for now, it's a directory to the shrines i have for the things i love.
-          </p>
-          <ul>
-            <li>
-              <a href="https://midsummerjay.neocities.org/shrines/loona.html">the girls of loona</a>
-            </li>
-          </ul>
+          <div class="shrinedirec">
+            
+            <a href="https://midsummerjay.neocities.org/shrines/loona.html">
+            <figure>
+              <img src="./images/loonashrine.jpeg">
+            
+            <figcaption>loona</figcaption>
+          </figure>
+        </a>
+          </div>
         </section>
       </main>
 
