--- a/public/shrines/loona.html
+++ b/public/shrines/loona.html
@@ -28,7 +28,7 @@
           <h1>loona</h1>
           <p>there's a lot of different ways people get into kpop. for me? it was <u>fire emblem: three houses</u> that did it. 
           </p>
-          <p>in 2019, there was this <a href="https://x.com/coolfest1999/status/1164027271016902656">incredible twitter thread</a> of fanmade interactions between the fe:3h characters on twitter. here's an example:</p>
+          <p>in 2019, there was this <a href="https://x.com/coolfest1999/status/1164027271016902656" target="_blank">incredible twitter thread</a> of fanmade interactions between the fe:3h characters on twitter. here's an example:</p>
           <div class="images"><img src="../images/fe3htwt1.jpg"></div>
           <p>
             after reading and re-reading the thread multiple times, i tweeted out a question - who's that girl in lysithea's profile picture? i quickly had a follow-up question - how do i "stan loona"? one reddit post later, i was in the thick of things.
