title update + meme page

--- a/public/blinkies.html
+++ b/public/blinkies.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>jay's spot - blinkies</title>
+    <title>a midsummer jay's zone - blinkies</title>
 	<meta name="description" content="a midsummer jay's zone - blinkies" />
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
