--- a/public/credits.html
+++ b/public/credits.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>jay's spot - credits</title>
+    <title>a midsummer jay's zone - credits</title>
 	<meta name="description" content="a midsummer jay's zone - credits" />
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
