updated blinkies page

--- a/public/blinkies.html
+++ b/public/blinkies.html
@@ -26,11 +26,17 @@
 <main id="content">
         <section>
           <h1>blinkies and other graphics</h1>
-          <p><a href="https://petrapixel.neocities.org/about/blinkies"><img src="./images/gaylove.gif"></a><br />
-            <a href="https://petrapixel.neocities.org/about/blinkies"><img src="./images/queercoded.png"></a><a href="https://hillhouse.neocities.org/pixels"><img src="./images/maskstamp.gif"></a></p>
-            <p style="text-align:center;font-size:10px;">
-              (all graphics link to source)
-            </p>
+          <p>
+            <a href="https://petrapixel.neocities.org/about/blinkies"><img src="./images/blinkies/gaylove.gif"></a>
+            <a href="https://jaysplace.neocities.org/graphics/blinkies"><img src="./images/blinkies/iluvcomp.gif"></a>
+              <a href="https://jaysplace.neocities.org/graphics/blinkies"><img src="./images/blinkies/neocitiesuser.gif"></a>
+            <br />
+            <a href="https://petrapixel.neocities.org/about/blinkies"><img src="./images/blinkies/queercoded.png"></a>
+            <a href="https://hillhouse.neocities.org/pixels"><img src="./images/blinkies/maskstamp.gif"></a>
+          </p>
+          <p style="text-align:center;font-size:10px;">
+            (all graphics link to source)
+          </p>
           </section>
       </main>
 
