--- a/public/blinkies.html
+++ b/public/blinkies.html
@@ -30,9 +30,23 @@
             <a href="https://petrapixel.neocities.org/about/blinkies"><img src="./images/blinkies/gaylove.gif"></a>
             <a href="https://jaysplace.neocities.org/graphics/blinkies"><img src="./images/blinkies/iluvcomp.gif"></a>
               <a href="https://jaysplace.neocities.org/graphics/blinkies"><img src="./images/blinkies/neocitiesuser.gif"></a>
+              <a href="https://blinkies.neocities.org/"><img src="./images/blinkies/0147-kirbywalk.gif"></a>
+              <a href="https://blinkiecollecti0n.neocities.org/"><img src="./images/blinkies/homoeroticsubtext.gif"></a>
+              <a href="https://sydsblinkies.neocities.org/"><img src="./images/blinkies/neopets.gif"></a>
+              <a href="https://sydsblinkies.neocities.org/"><img src="./images/blinkies/fairytype.gif"></a>
             <br />
             <a href="https://petrapixel.neocities.org/about/blinkies"><img src="./images/blinkies/queercoded.png"></a>
             <a href="https://hillhouse.neocities.org/pixels"><img src="./images/blinkies/maskstamp.gif"></a>
+            <a href="https://cloudcover.neocities.org/digital/badges"><img src="./images/blinkies/indiegamesbadge.png"></a>
+            <a href="https://cloudcover.neocities.org/digital/badges"><img src="./images/blinkies/powerbybob.gif"></a>
+            <a href="https://echoesoftheend.neocities.org/"><img src="./images/blinkies/wii.png"></a>
+            <a href="https://echoesoftheend.neocities.org/"><img src="./images/blinkies/y2k.gif"></a>
+            <br />
+            <a href="https://echoesoftheend.neocities.org/"><img src="./images/blinkies/neil.png"></a>
+            <a href="https://liseklucian.neocities.org/"><img src="./images/blinkies/garf.png"></a>
+            <a href="https://thisdastampdoesnotexist.tumblr.com/post/687398367854297088/hehenot-hehepiendish-kitten-in-front-of-a"><img src="./images/blinkies/gamergender.png"></a>
+            <br />
+            <a href="https://cloudcover.neocities.org/digital/badges"><img src="./images/blinkies/gunch.png"></a>
           </p>
           <p style="text-align:center;font-size:10px;">
             (all graphics link to source)
