pokemon shrine added

--- a/public/sitemap.html
+++ b/public/sitemap.html
@@ -29,11 +29,24 @@
           <p>
             <ul>
             <li><a href="https://midsummerjay.neocities.org/index.html">home</a></li>
-            <li><a href="https://midsummerjay.neocities.org/bio.html">bio</a></li>
+            <li>
+              about
+              <ul>
+                <li><a href="https://midsummerjay.neocities.org/bio.html">bio</a></li>
+                <li><a href="https://midsummerjay.neocities.org/memes.html">memes</a></li>
+              </ul>
+            </li>
             <li>
               <a href="https://midsummerjay.neocities.org/blog.html">blog</a>
               <ul>
                 <li><a href="https://midsummerjay.neocities.org/posts/archive.html">blog archive</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="https://midsummerjay.neocities.org/shrines.html">shrines</a>
+              <ul>
+                <li><a href="https://midsummerjay.neocities.org/shrines/loona.html">loona</a></li>
+                <li><a href="https://midsummerjay.neocities.org/shrines/p-o-k-accent-e-mon.html">pokémon</a></li>
               </ul>
             </li>
             <li><a href="https://midsummerjay.neocities.org/guestbook.html">guestbook</a></li>
