--- a/public/blinkies.html
+++ b/public/blinkies.html
@@ -26,6 +26,16 @@
 <main id="content">
         <section>
           <h1>blinkies and other graphics</h1>
+          <div class="tamaclass">
+          
+            <figure class="tamaclass">
+              <a href="https://tamanotchi.world/16194c"></a>
+              <img src="https://tamanotchi.world/i2/16194" alt="It's tamaNOTchi! Click to feed!">
+              </a>
+            </figure>
+            <figcaption class="tamaclass">↑↑↑<br />click to feed my tamanotchi :3c</figcaption>
+          
+        </div>
           <p>
             <a href="https://petrapixel.neocities.org/about/blinkies"><img src="./images/blinkies/gaylove.gif"></a>
             <a href="https://jaysplace.neocities.org/graphics/blinkies"><img src="./images/blinkies/iluvcomp.gif"></a>
