fixed broken tamanotchi link

--- a/public/blinkies.html
+++ b/public/blinkies.html
@@ -29,7 +29,7 @@
           <div class="tamaclass">
           
             <figure class="tamaclass">
-              <a href="https://tamanotchi.world/16194c"></a>
+              <a href="https://tamanotchi.world/16194c">
               <img src="https://tamanotchi.world/i2/16194" alt="It's tamaNOTchi! Click to feed!">
               </a>
             </figure>
