--- a/public/blinkies.html
+++ b/public/blinkies.html
@@ -45,12 +45,18 @@
               <a href="https://sydsblinkies.neocities.org/" target="_blank"><img src="./images/blinkies/neopets.gif"></a>
               <a href="https://sydsblinkies.neocities.org/" target="_blank"><img src="./images/blinkies/fairytype.gif"></a>
             <br />
-            <a href="https://petrapixel.neocities.org/about/blinkies" target="_blank"><img src="./images/blinkies/queercoded.png"></a>
+            <a href="https://plasticdino.neocities.org/graphics" target="_blank"><img src="./images/blinkies/queercoded.png"></a>
+            <a href="https://plasticdino.neocities.org/graphics" target="_blank"><img src="./images/blinkies/naptime.png"></a>
             <a href="https://hillhouse.neocities.org/pixels" target="_blank"><img src="./images/blinkies/maskstamp.gif"></a>
             <a href="https://cloudcover.neocities.org/digital/badges" target="_blank"><img src="./images/blinkies/indiegamesbadge.png"></a>
             <a href="https://cloudcover.neocities.org/digital/badges" target="_blank"><img src="./images/blinkies/powerbybob.gif"></a>
             <a href="https://echoesoftheend.neocities.org/" target="_blank"><img src="./images/blinkies/wii.png"></a>
             <a href="https://echoesoftheend.neocities.org/" target="_blank"><img src="./images/blinkies/y2k.gif"></a>
+            <a href="https://plasticdino.neocities.org/graphics" target="_blank"><img src="./images/blinkies/loona.gif"></a>
+            <a href="https://plasticdino.neocities.org/graphics" target="_blank"><img src="./images/blinkies/loossemble.png"></a>
+            <a href="https://plasticdino.neocities.org/graphics" target="_blank"><img src="./images/blinkies/strawberryrush.png"></a>
+            <a href="https://plasticdino.neocities.org/graphics" target="_blank"><img src="./images/blinkies/yves.png"></a>
+            <a href="https://plasticdino.neocities.org/graphics" target="_blank"><img src="./images/blinkies/redvelvet.gif"></a>
             <br />
             <a href="https://echoesoftheend.neocities.org/" target="_blank"><img src="./images/blinkies/neil.png"></a>
             <a href="https://liseklucian.neocities.org/" target="_blank"><img src="./images/blinkies/garf.png"></a>
