--- a/public/credits.html
+++ b/public/credits.html
@@ -40,6 +40,8 @@
             <li><a href="//www.neopets.com/userlookup.phtml?user=snocatt" target="_blank">ixi adoptable (duke_of_spork on neopets)</a></li>
             <li><a href="https://x.com/kianamosser" target="_blank">pokémon art on shrines page</a></li>
           </ul>
+          <h3>sites i like!</h3>
+          <a href="https://plasticdino.neocities.org/" target="_blank"><img src="./images/plasticdino.gif" title="great graphics"></a>
         </section>
       </main>
 
