added button to sidebar

--- a/public/blinkies.html
+++ b/public/blinkies.html
@@ -36,6 +36,7 @@
             <figcaption class="tamaclass">↑↑↑<br />click to feed my tamanotchi :3c</figcaption>
           
         </div>
+        <div style="width:75%;">
           <p>
             <a href="https://petrapixel.neocities.org/about/blinkies" target="_blank"><img src="./images/blinkies/gaylove.gif"></a>
             <a href="https://jaysplace.neocities.org/graphics/blinkies" target="_blank"><img src="./images/blinkies/iluvcomp.gif"></a>
@@ -64,6 +65,7 @@
             <br />
             <a href="https://cloudcover.neocities.org/digital/badges" target="_blank"><img src="./images/blinkies/gunch.png"></a>
           </p>
+        </div>
           <p style="text-align:center;font-size:10px;">
             (all graphics link to source)
           </p>
