--- a/public/blinkies.html
+++ b/public/blinkies.html
@@ -36,7 +36,7 @@
             <figcaption class="tamaclass">↑↑↑<br />click to feed my tamanotchi :3c</figcaption>
           
         </div>
-        <div style="width:75%;">
+        <div>
           <p>
             <a href="https://petrapixel.neocities.org/about/blinkies" target="_blank"><img src="./images/blinkies/gaylove.gif"></a>
             <a href="https://jaysplace.neocities.org/graphics/blinkies" target="_blank"><img src="./images/blinkies/iluvcomp.gif"></a>
