--- a/public/blinkies.html
+++ b/public/blinkies.html
@@ -29,8 +29,8 @@
           <div class="tamaclass">
           
             <figure class="tamaclass">
-              <a href="https://tamanotchi.world/16194c">
-              <img src="https://tamanotchi.world/i2/16194" target="_blank" alt="It's tamaNOTchi! Click to feed!">
+              <a href="https://tamanotchi.world/16194c" target="_blank">
+              <img src="https://tamanotchi.world/i2/16194" alt="It's tamaNOTchi! Click to feed!">
               </a>
             </figure>
             <figcaption class="tamaclass">↑↑↑<br />click to feed my tamanotchi :3c</figcaption>
