update button + credit

--- a/public/credits.html
+++ b/public/credits.html
@@ -33,6 +33,7 @@
           </ul>
           <h3>artifacts</h3>
           <a href="http://jasminnie.weebly.com" target="_blank"><img src="https://31.media.tumblr.com/56a321555b1a303347a4a2a3fe1b3b96/tumblr_inline_n8mcyeTNEc1qbq39l.png" title="dividers"></a>
+          <a href="https://88x31.datakra.sh/" target="_blank"><img src="./images/datakrash_button.gif" title="button generator"></a>
           <ul>
             <li><a href="https://www.favicon.cc/?action=icon&file_id=989460" target="_blank">purple planet favicon (amna on favicon.cc)</a></li>
             <li><a href="https://girlschannel.tumblr.com/post/678175862465740800" target="_blank">background (girlschannel on tumblr)</a></li>
