--- a/public/sitemap.html
+++ b/public/sitemap.html
@@ -36,6 +36,7 @@
                 <li><a href="https://midsummerjay.neocities.org/memes.html">memes</a></li>
               </ul>
             </li>
+            <li><a href="https://midsummerjay.neocities.org/medialog.html">media log</a></li>
             <li>
               <a href="https://midsummerjay.neocities.org/blog.html">blog</a>
               <ul>
