--- a/public/medialog.html
+++ b/public/medialog.html
@@ -54,7 +54,7 @@
 	            </a>
 	            <a href="https://app.thestorygraph.com/books/5cbefe3c-446c-4f1c-9cd4-b4ec23bee01c" target="_blank">
 			  		<figure>
-	               		<img src="./images/medialog/books/tgotw.jpg">
+	               		<img src="./images/medialog/books/tgotw.JPG">
 	               		<figcaption>
 	               			<b>the god of the woods</b><br />
 	               			<i>liz moore</i><br />
