--- a/public/medialog.html
+++ b/public/medialog.html
@@ -29,96 +29,119 @@
            <button type="button" class="collapsible parent active"><span class="collapsetoken">➜</span> 2025</button>
 			<div class="collapsecontent" style="display: block;">
 			  <button type="button" class="collapsible child active"><span class="collapsetoken">➜</span> books</button>
-			  <div class="childcollapsecontent" style="display: block;">
-			  	<a href="https://app.thestorygraph.com/books/9f4bb675-20a7-441c-a341-559c09431914" target="_blank">
-			  		<figure>
-	               		<img src="./images/medialog/books/goodneighbors.jpg">
-	               		<figcaption>
-	               			<b>good neighbors</b><br />
-	               			<i>sarah langan</i><br />
-	               			<b><i>finished:</i></b> 01/03/2025<br />
-	               			<b><i>rating:</i></b>★★★★☆
-	               		</figcaption>
-	               	</figure>
-	            </a>
-	            <a href="https://app.thestorygraph.com/books/387895b3-364b-4008-9b5f-32fcc0ce546f" target="_blank">
-			  		<figure>
-	               		<img src="./images/medialog/books/wwbu.jpg">
-	               		<figcaption>
-	               			<b>why we broke up</b><br />
-	               			<i>daniel handler</i><br />
-	               			<b><i>finished:</i></b> 01/07/2025<br />
-	               			<b><i>rating:</i></b>★★★☆☆
-	               		</figcaption>
-	               	</figure>
-	            </a>
-	            <a href="https://app.thestorygraph.com/books/5cbefe3c-446c-4f1c-9cd4-b4ec23bee01c" target="_blank">
-			  		<figure>
-	               		<img src="./images/medialog/books/tgotw.JPG">
-	               		<figcaption>
-	               			<b>the god of the woods</b><br />
-	               			<i>liz moore</i><br />
-	               			<b><i>finished:</i></b> 01/10/2025<br />
-	               			<b><i>rating:</i></b>★★★★☆
-	               		</figcaption>
-	               	</figure>
-	            </a>
-	            <a href="https://app.thestorygraph.com/books/6f6c6738-b20e-4e56-a973-f80458dc0058" target="_blank">
-			  		<figure>
-	               		<img src="./images/medialog/books/crying49.jpg">
-	               		<figcaption>
-	               			<b>the crying of lot 49</b><br />
-	               			<i>thomas pynchon</i><br />
-	               			<b><i>finished:</i></b> 02/02/2025<br />
-	               			<b><i>rating:</i></b>★★★⯪☆
-	               		</figcaption>
-	               	</figure>
-	            </a>
-	            <a href="https://app.thestorygraph.com/books/666adeca-a8fd-4381-8cfa-9bc0a76c0a26" target="_blank">
-			  		<figure>
-	               		<img src="./images/medialog/books/tmc.jpg">
-	               		<figcaption>
-	               			<b>this mortal coil</b><br />
-	               			<i>emily suvada</i><br />
-	               			<b><i>finished:</i></b> 02/11/2025<br />
-	               			<b><i>rating:</i></b>★★☆☆☆
-	               		</figcaption>
-	               	</figure>
-	            </a>
-	            <a href="https://app.thestorygraph.com/books/7a58d916-e8be-416f-b1ad-b0726524163b" target="_blank">
-			  		<figure>
-	               		<img src="./images/medialog/books/tjt.jpg">
-	               		<figcaption>
-	               			<b>the jasmine throne</b><br />
-	               			<i>tasha suri</i><br />
-	               			<b><i>finished:</i></b> 02/22/2025<br />
-	               			<b><i>rating:</i></b>★★★★☆
-	               		</figcaption>
-	               	</figure>
-	            </a>
-	            <a href="https://app.thestorygraph.com/books/0885d5f1-edc2-435f-b17c-7e881829dbc6" target="_blank">
-			  		<figure>
-	               		<img src="./images/medialog/books/allsystemsred.jpg">
-	               		<figcaption>
-	               			<b>all systems red</b><br />
-	               			<i>martha wells</i><br />
-	               			<b><i>finished:</i></b> 02/28/2025<br />
-	               			<b><i>rating:</i></b>★★★⯪☆
-	               		</figcaption>
-	               	</figure>
-	            </a>
-	            <a href="https://app.thestorygraph.com/books/8e34ba9e-26c2-44a0-a02f-85c9cc8d5c05" target="_blank">
-			  		<figure>
-	               		<img src="./images/medialog/books/bwway.jpg">
-	               		<figcaption>
-	               			<b>beautiful world, where are you</b><br />
-	               			<i>sally rooney</i><br />
-	               			<b><i>finished:</i></b> 03/05/2025<br />
-	               			<b><i>rating:</i></b>★★★⯪☆
-	               		</figcaption>
-	               	</figure>
-	            </a>
-			  </div>
+			  	<div class="childcollapsecontent" style="display: block;">
+				  	<a href="https://app.thestorygraph.com/books/9f4bb675-20a7-441c-a341-559c09431914" target="_blank">
+				  		<figure>
+		               		<img src="./images/medialog/books/goodneighbors.jpg">
+		               		<figcaption>
+		               			<b>good neighbors</b><br />
+		               			<i>sarah langan</i><br />
+		               			<b><i>finished:</i></b> 01/03/2025<br />
+		               			<b><i>rating:</i></b>★★★★☆
+		               		</figcaption>
+		               	</figure>
+		            </a>
+		            <a href="https://app.thestorygraph.com/books/387895b3-364b-4008-9b5f-32fcc0ce546f" target="_blank">
+				  		<figure>
+		               		<img src="./images/medialog/books/wwbu.jpg">
+		               		<figcaption>
+		               			<b>why we broke up</b><br />
+		               			<i>daniel handler</i><br />
+		               			<b><i>finished:</i></b> 01/07/2025<br />
+		               			<b><i>rating:</i></b>★★★☆☆
+		               		</figcaption>
+		               	</figure>
+		            </a>
+		            <a href="https://app.thestorygraph.com/books/5cbefe3c-446c-4f1c-9cd4-b4ec23bee01c" target="_blank">
+				  		<figure>
+		               		<img src="./images/medialog/books/tgotw.JPG">
+		               		<figcaption>
+		               			<b>the god of the woods</b><br />
+		               			<i>liz moore</i><br />
+		               			<b><i>finished:</i></b> 01/10/2025<br />
+		               			<b><i>rating:</i></b>★★★★☆
+		               		</figcaption>
+		               	</figure>
+		            </a>
+		            <a href="https://app.thestorygraph.com/books/6f6c6738-b20e-4e56-a973-f80458dc0058" target="_blank">
+				  		<figure>
+		               		<img src="./images/medialog/books/crying49.jpg">
+		               		<figcaption>
+		               			<b>the crying of lot 49</b><br />
+		               			<i>thomas pynchon</i><br />
+		               			<b><i>finished:</i></b> 02/02/2025<br />
+		               			<b><i>rating:</i></b>★★★⯪☆
+		               		</figcaption>
+		               	</figure>
+		            </a>
+		            <a href="https://app.thestorygraph.com/books/666adeca-a8fd-4381-8cfa-9bc0a76c0a26" target="_blank">
+				  		<figure>
+		               		<img src="./images/medialog/books/tmc.jpg">
+		               		<figcaption>
+		               			<b>this mortal coil</b><br />
+		               			<i>emily suvada</i><br />
+		               			<b><i>finished:</i></b> 02/11/2025<br />
+		               			<b><i>rating:</i></b>★★☆☆☆
+		               		</figcaption>
+		               	</figure>
+		            </a>
+		            <a href="https://app.thestorygraph.com/books/7a58d916-e8be-416f-b1ad-b0726524163b" target="_blank">
+				  		<figure>
+		               		<img src="./images/medialog/books/tjt.jpg">
+		               		<figcaption>
+		               			<b>the jasmine throne</b><br />
+		               			<i>tasha suri</i><br />
+		               			<b><i>finished:</i></b> 02/22/2025<br />
+		               			<b><i>rating:</i></b>★★★★☆
+		               		</figcaption>
+		               	</figure>
+		            </a>
+		            <a href="https://app.thestorygraph.com/books/0885d5f1-edc2-435f-b17c-7e881829dbc6" target="_blank">
+				  		<figure>
+		               		<img src="./images/medialog/books/allsystemsred.jpg">
+		               		<figcaption>
+		               			<b>all systems red</b><br />
+		               			<i>martha wells</i><br />
+		               			<b><i>finished:</i></b> 02/28/2025<br />
+		               			<b><i>rating:</i></b>★★★⯪☆
+		               		</figcaption>
+		               	</figure>
+		            </a>
+		            <a href="https://app.thestorygraph.com/books/8e34ba9e-26c2-44a0-a02f-85c9cc8d5c05" target="_blank">
+				  		<figure>
+		               		<img src="./images/medialog/books/bwway.jpg">
+		               		<figcaption>
+		               			<b>beautiful world, where are you</b><br />
+		               			<i>sally rooney</i><br />
+		               			<b><i>finished:</i></b> 03/05/2025<br />
+		               			<b><i>rating:</i></b>★★★⯪☆
+		               		</figcaption>
+		               	</figure>
+		            </a>
+				</div>
+			  <button type="button" class="collapsible child active"><span class="collapsetoken">➜</span> movies</button>
+			  	<div class="childcollapsecontent" style="display: block;">
+			  		<a href="https://letterboxd.com/mirenscene/film/oceans-eleven-2001/" target="_blank">
+				  		<figure>
+		               		<img src="./images/medialog/movies/o11.jpg">
+		               		<figcaption>
+		               			<b>ocean's eleven</b><br />
+		               			<b><i>watched:</i></b> 01/13/2025<br />
+		               			<b><i>rating:</i></b>★★★★★
+		               		</figcaption>
+		               	</figure>
+		            </a>
+		            <a href="https://letterboxd.com/mirenscene/film/burn-after-reading/" target="_blank">
+				  		<figure>
+		               		<img src="./images/medialog/movies/bar.jpg">
+		               		<figcaption>
+		               			<b>burn after reading</b><br />
+		               			<b><i>watched:</i></b> 01/14/2025<br />
+		               			<b><i>rating:</i></b>★★★★☆
+		               		</figcaption>
+		               	</figure>
+		            </a>
+			  	</div>
 			</div> 
         </section>
       </main>
