--- a/public/medialog.html
+++ b/public/medialog.html
@@ -150,13 +150,9 @@
     <!-- Add any additional Javascript code (<script></script>) here. -->
     <script>
     	var coll = document.getElementsByClassName("collapsible");
-		console.log(coll);
-		console.log(coll.length);
-		console.log(coll[0]);
 		var i;
 
-		for (i = 0; i <= coll.length; i++) {
-		  console.log(i);
+		for (i = 0; i < coll.length; i++) {
 		  coll[i].addEventListener("click", function() {
 		    this.classList.toggle("active");
 		    var content = this.nextElementSibling;
